Rewrite entire application