@@ -3,68 +3,66 @@ package com.github.nhirakawa.swarm.protocol.state;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import com.github.nhirakawa.swarm.protocol.config.SwarmConfig;
-import com.github.nhirakawa.swarm.protocol.config.SwarmNode;
-import com.github.nhirakawa.swarm.protocol.model.PingAckMessage;
-import com.github.nhirakawa.swarm.protocol.model.SwarmTimeoutMessage;
+import com.github.nhirakawa.swarm.protocol.fake.FakeTicker;
+import com.github.nhirakawa.swarm.protocol.model.SwarmAddress;
 import com.github.nhirakawa.swarm.protocol.model.Transition;
-import com.google.common.collect.ImmutableSet;
+import com.github.nhirakawa.swarm.protocol.model.internal.InboundPingAck;
+import com.google.common.base.Stopwatch;
 import java.time.Duration;
-import java.time.Instant;
 import java.util.Optional;
+import java.util.Set;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 public class WaitingForPingProxyProtocolStateTest {
 
-  private static final Instant TIMESTAMP = Instant.ofEpochMilli(1000);
-
-  private static final SwarmNode LOCAL_NODE = SwarmNode
-    .builder()
-    .setHost("local")
-    .setPort(1000)
-    .build();
-
-  private static final SwarmNode PING_TARGET = SwarmNode
-    .builder()
-    .setHost("host")
-    .setPort(2000)
-    .build();
-
-  private static final SwarmNode OTHER_NODE_1 = SwarmNode
-    .builder()
-    .setHost("host")
-    .setPort(3001)
-    .build();
-  private static final SwarmNode OTHER_NODE_2 = SwarmNode
-    .builder()
-    .setHost("host")
-    .setPort(3002)
-    .build();
+  private static final SwarmAddress LOCAL = new SwarmAddress(
+    "local",
+    1000,
+    "local-1000"
+  );
+  private static final SwarmAddress TARGET = new SwarmAddress(
+    "host",
+    2000,
+    "host-2000"
+  );
+  private static final SwarmAddress OTHER_1 = new SwarmAddress(
+    "host",
+    3001,
+    "host-3001"
+  );
+  private static final SwarmAddress OTHER_2 = new SwarmAddress(
+    "host",
+    3002,
+    "host-3002"
+  );
 
   private static final SwarmConfig SWARM_CONFIG = SwarmConfig
     .builder()
-    .addClusterNodes(PING_TARGET, OTHER_NODE_1, OTHER_NODE_2)
-    .setDebugEnabled(false)
-    .setFailureInjectionPercent(0)
+      .setLocalAddress(LOCAL)
+      .addInitialClusterMembership(TARGET, OTHER_1, OTHER_2)
     .setFailureSubGroup(1)
-    .setLocalNode(LOCAL_NODE)
     .setProtocolTick(Duration.ofMillis(100))
     .setMessageTimeout(Duration.ofMillis(20))
-    .setSwarmStateBufferSize(1)
     .setProtocolPeriod(Duration.ofSeconds(1))
     .build();
+
+  private FakeTicker ticker;
 
   private WaitingForPingProxyProtocolState protocolState;
 
   @BeforeEach
   public void setup() {
+    ticker = new FakeTicker();
+
     protocolState =
       new WaitingForPingProxyProtocolState(
-        TIMESTAMP,
         SWARM_CONFIG,
         "protocol-period-id",
-        PING_TARGET,
-        ImmutableSet.of(OTHER_NODE_1)
+        Stopwatch.createStarted(ticker),
+        new MemberRegistry(Set.of(TARGET, OTHER_1, OTHER_2)),
+        TARGET,
+        Set.of(OTHER_1)
       );
   }
 
@@ -72,37 +70,25 @@ public class WaitingForPingProxyProtocolStateTest {
   public void itTransitionsToWaitingForNextProtocolPeriodAfterProxyAck() {
     // TODO @nhirakawa - make this test more robust
     Optional<Transition> transition = protocolState.applyPingAck(
-      PingAckMessage
-        .builder()
-        .setProtocolPeriodId("protocol-period-id")
-        .setUniqueMessageId("asdf")
-        .setFrom(OTHER_NODE_1)
-        .setTo(LOCAL_NODE)
-        .setProxyFor(PING_TARGET)
-        .build()
+      new InboundPingAck(OTHER_1, Optional.of(TARGET), "protocol-period-id")
     );
 
     assertThat(transition).isPresent();
 
-    assertThat(transition.get().getMessagesToSend()).isEmpty();
+    assertThat(transition.get().getResponsesToSend()).isEmpty();
     assertThat(transition.get().getNextSwarmProtocolState())
       .isInstanceOf(WaitingForNextProtocolPeriodProtocolState.class);
   }
 
   @Test
   public void itTransitionsToWaitingForNextProtocolPeriodAfterProtocolTimeout() {
-    Optional<Transition> transition = protocolState.applyTick(
-      SwarmTimeoutMessage
-        .builder()
-        .setTimestamp(
-          TIMESTAMP.plus(SWARM_CONFIG.getProtocolPeriod()).plusSeconds(1)
-        )
-        .build()
-    );
+    ticker.write(SWARM_CONFIG.getProtocolPeriod().toNanos() * 2);
+
+    Optional<Transition> transition = protocolState.applyTick();
 
     assertThat(transition).isPresent();
 
-    assertThat(transition.get().getMessagesToSend()).isEmpty();
+    assertThat(transition.get().getResponsesToSend()).isEmpty();
     assertThat(transition.get().getNextSwarmProtocolState())
       .isInstanceOf(WaitingForNextProtocolPeriodProtocolState.class);
 
@@ -112,21 +98,12 @@ public class WaitingForPingProxyProtocolStateTest {
 
     assertThat(nextState.getProtocolPeriodId())
       .isEqualTo(protocolState.getProtocolPeriodId());
-    assertThat(nextState.protocolStartTimestamp)
-      .isEqualTo(protocolState.protocolStartTimestamp);
   }
 
   @Test
   public void itDoesNothingIfAckIsNotFromProxy() {
     Optional<Transition> transition = protocolState.applyPingAck(
-      PingAckMessage
-        .builder()
-        .setProtocolPeriodId("protocol-period-id")
-        .setUniqueMessageId("asdf")
-        .setFrom(OTHER_NODE_2)
-        .setTo(LOCAL_NODE)
-        .setProxyFor(PING_TARGET)
-        .build()
+      new InboundPingAck(OTHER_2, Optional.of(TARGET), "protocol-period-id")
     );
 
     assertThat(transition).isEmpty();
@@ -135,14 +112,7 @@ public class WaitingForPingProxyProtocolStateTest {
   @Test
   public void itDoesNothingIfAckIsNotForTarget() {
     Optional<Transition> transition = protocolState.applyPingAck(
-      PingAckMessage
-        .builder()
-        .setProtocolPeriodId("protocol-period-id")
-        .setUniqueMessageId("asdf")
-        .setFrom(OTHER_NODE_1)
-        .setTo(LOCAL_NODE)
-        .setProxyFor(OTHER_NODE_2)
-        .build()
+      new InboundPingAck(OTHER_1, Optional.of(OTHER_2), "protocol-period-id")
     );
 
     assertThat(transition).isEmpty();
